--- a/scss/form/_radio.scss
+++ b/scss/form/_radio.scss
@@ -59,6 +59,7 @@ Requires the following HTML markup:
     // styling and focusing the fake radio, making use of the ':checked' state of the actual radio input
     input[type=radio] {
         opacity: 0;
+        position: absolute;
         // checked icon
         &:checked {
             & + .custom-radio {
